# autopyweb

./: .editorconfig  .gitignore  README.md  app.py  gunicorn.conf.py  pyproject.toml
.github/actions/action_dynamic_deploy/: action.yml  action_entrypoint.sh
.github/actions/action_dynamic_deploy1/: action.yml  action_entrypoint.sh
.github/actions/action_dynamic_deploy_js/: action.yml  index.js  main.js  package-lock.json  package.json
.github/workflows/: pull_request_workflow.yml  test1.yml  test2.yml
autopyweb/: __init__.py  __main__.py  app.py  functions.py
monitor/: app.py  functions.py
test/: test_1.py
tests/: test_1.py
