[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dynamic.monitor"
description = ""
version = "0.0.1"
authors = ["Ashley Sommer <Ashley.Sommer@csiro.au>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "~0.10.5"
GitPython = "~3.0"
sanic = "==19.6.3"

[tool.poetry.dev-dependencies]
pytest = "~5.2.0"
